Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29318

[Regression] When a validator is used and EchoMode::Password is used, the input gets cleared when the character count exceeds the validator's maximum count

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.1
    • 4.8.3, 4.8.4
    • None
    • Windows 7, Ubuntu 12.04

      This is regression from a commit to:
      https://bugreports.qt-project.org/browse/QTBUG-14226
      https://codereview.qt-project.org/#change,15185

      Steps to reproduce:
      1) execute the attached application
      2) start inputting to the top most TextInput
      3) Type more than 10 characters

      Expected result:
      One shouldn't be able to input any characters.

      Actual result:
      Inputed text disappears.

        1. tsLineEditPasswordMode.zip
          2 kB
          Qt Support
        2. qtbug29318.zip
          0.9 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-29318
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes